// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox Matches the snapshot (dropdown) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 6rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c2.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c2.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c2.ellipsis-text:hover span,
.c2.ellipsis-text.focused span {
  display: block;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 0;
  position: relative;
  white-space: nowrap;
}

.c4:hover {
  background-color: #DBDEE1;
}

.c4.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c4.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c4.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c4.ellipsis-text:hover span,
.c4.ellipsis-text.focused span {
  display: block;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c6.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c6.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c6.ellipsis-text:hover span,
.c6.ellipsis-text.focused span {
  display: block;
}

.c3 {
  overflow: hidden;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-full-text="Option A"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
    >
      <div
        class="c3"
      >
        Option A
      </div>
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c4"
      data-full-text="Option B"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
      selected=""
    >
      <svg
        class="c5"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      <div
        class="c3"
      >
        Option B
      </div>
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-full-text="Option C"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
    >
      <div
        class="c3"
      >
        Option C
      </div>
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-full-text="Option D"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      <div
        class="c3"
      >
        Option D
      </div>
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c6"
      data-full-text="Option Disabled"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      <div
        class="c3"
      >
        Option Disabled
      </div>
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot (multiselect + checkIndicator) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 8rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 0;
  position: relative;
  white-space: nowrap;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c2.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c2.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c2.ellipsis-text:hover span,
.c2.ellipsis-text.focused span {
  display: block;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c5:hover {
  background-color: #DBDEE1;
}

.c5.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c5.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c5.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c5.ellipsis-text:hover span,
.c5.ellipsis-text.focused span {
  display: block;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c6.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c6.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c6.ellipsis-text:hover span,
.c6.ellipsis-text.focused span {
  display: block;
}

.c4 {
  overflow: hidden;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-multiselectable="true"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="true"
      class="c2"
      data-full-text="Option A"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
      selected=""
    >
      <svg
        class="c3"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      <div
        class="c4"
      >
        Option A
      </div>
    </li>
    <li
      aria-label="Option B"
      aria-selected="false"
      class="c5"
      data-full-text="Option B"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
    >
      <div
        class="c4"
      >
        Option B
      </div>
    </li>
    <li
      aria-label="Option C"
      aria-selected="true"
      class="c2"
      data-full-text="Option C"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
      selected=""
    >
      <svg
        class="c3"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      <div
        class="c4"
      >
        Option C
      </div>
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c5"
      data-full-text="Option D"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      <div
        class="c4"
      >
        Option D
      </div>
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c6"
      data-full-text="Option Disabled"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      <div
        class="c4"
      >
        Option Disabled
      </div>
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 6rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c2.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c2.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c2.ellipsis-text:hover span,
.c2.ellipsis-text.focused span {
  display: block;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 0;
  position: relative;
  white-space: nowrap;
}

.c4:hover {
  background-color: #DBDEE1;
}

.c4.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c4.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c4.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c4.ellipsis-text:hover span,
.c4.ellipsis-text.focused span {
  display: block;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 2rem;
  line-height: 2rem;
  padding: 0 8px 0 var(--spacing-4x);
  position: relative;
  white-space: nowrap;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6.focused:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c6.ellipsis-text span {
  background-color: #60666e;
  border-radius: 4px;
  color: #fff;
  display: none;
  font-size: 12px;
  left: 6%;
  line-height: 20px;
  padding: 1px 8px 2px 8px;
  position: fixed;
  top: -20px;
  white-space: nowrap;
  z-index: 1000;
}

.c6.ellipsis-text span::after {
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 12px solid #60666e;
  bottom: -16px;
  content: '';
  left: 40%;
  margin-left: 14.6px;
  position: absolute;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c6.ellipsis-text:hover span,
.c6.ellipsis-text.focused span {
  display: block;
}

.c3 {
  overflow: hidden;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  color: #60666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-full-text="Option A"
      data-testid="listitem-optionA"
      id="undefined_optionA"
      role="option"
    >
      <div
        class="c3"
      >
        Option A
      </div>
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c4"
      data-full-text="Option B"
      data-testid="listitem-optionB"
      id="undefined_optionB"
      role="option"
      selected=""
    >
      <svg
        class="c5"
        color="currentColor"
        data-testid="check-icon"
        focusable="false"
        height="16"
        width="16"
      />
      <div
        class="c3"
      >
        Option B
      </div>
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-full-text="Option C"
      data-testid="listitem-optionC"
      id="undefined_optionC"
      role="option"
    >
      <div
        class="c3"
      >
        Option C
      </div>
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-full-text="Option D"
      data-testid="listitem-optionD"
      id="undefined_optionD"
      role="option"
    >
      <div
        class="c3"
      >
        Option D
      </div>
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c6"
      data-full-text="Option Disabled"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="undefined_optionDisabled"
      role="option"
    >
      <div
        class="c3"
      >
        Option Disabled
      </div>
    </li>
  </ul>
</div>
`;
